# New_excel

./: BATCH_READING_GUIDE.md  pyproject.toml  requirements.txt
excel_mcp/: __main__.py  api.py  calculations.py  chart.py  data.py  document_extractor.py  pivot.py  server.py  tables.py
